# AoC

./: .gitignore
23/day1/java/: Trebucket1.java
23/day1/ocaml/digits1/: digits1.ml  dune
23/day1/ocaml/digits2/: digits2.ml  dune  inputs
23/day1/ruby/: trebucket1.rb  trebucket2.rb
23/day2/ocaml/game1/: dune-project
23/day2/ocaml/game1/lib/: dune  game1.ml
23/day2/ocaml/game1/test/: dune  inputs  test.input  test.ml
23/day2/ocaml/game2/: dune-project  game2.opam
23/day2/ocaml/game2/lib/: dune  game2.ml
23/day2/ocaml/game2/test/: dune  inputs  test.input  test.ml
