(lang dune 3.10)

(name game2)

(generate_opam_files true)

(source
 (github gyreas/AoC))

(authors "Saheed Adeleye")

(maintainers "Saheed Adeleye")

(license BSD-2)

(documentation https://github.com/gyreas/AoC/23/day2/ocaml/game2/README)

(package
 (name game2)
 (synopsis "My solution of Advent of Code Day 2 part 2")
 (description 
  "The power of a set of cubes is equal to the numbers of red, green, and blue cubes multiplied together. 
   The power of the minimum set of cubes in game 1 is 48. In games 2-5 it was 12, 1560, 630, and 36, respectively.
   Adding up these five powers produces the sum 2286. For each game, find the minimum set of cubes that must have been present. 
   What is the sum of the power of these sets?")
 (depends ocaml dune)
 (tags
  (aoc2023 december christmas advent-of-code advent ocaml parsing)))
